--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -1431,12 +1431,12 @@ code {
 
 .navy-bg {
   background-color: #3385FF;
-  color: #fff;
+  color: rgb(0, 0, 0);
 }
 
 .navy-bg-present {
-  background-color: #1cf400;
-  color: #fff;
+  background-color: #3385FF;
+  color: rgb(0, 0, 0);
 }
 
 .panel-primary {
